--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,6 +42,8 @@ h2:hover{
 
     margin-top: -5px;
 
+    transition: 1s;
+
 }
 
 .header div{
@@ -176,6 +178,60 @@ h2:hover{
 
     cursor: pointer;
     border-radius: 8px;
+}
+
+/* HEADER MENU MOBILE */
+
+.headerContainer{
+    width: 100%;
+
+    display: flex;
+    flex-direction: row-reverse;
+
+    padding: 1rem 2%;
+
+}
+
+header.header-mobile{
+    display:none;
+
+    width: 7.5rem;
+    height: 7.5rem;
+
+    background-image: url('../images/menu.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+
+    font-size: 2rem;
+}
+
+header.header-mobile:hover ul{
+    display: flex;
+}
+
+header.header-mobile ul{
+    display: none;
+    justify-content: space-around;
+    background-color: rgb(240, 240, 240);
+    position: absolute;
+
+    width: 100%;
+    top: 5rem;
+    left: 0;
+
+    list-style-type: none;
+
+    text-align: center;
+
+    animation-duration : 1s;
+}
+
+header.header-mobile ul li{
+    padding: 1px 2%;
+}
+
+header.header-mobile ul li a{
+    text-decoration: none;
 }
 
 .dropdown-content div{
@@ -475,6 +531,20 @@ h2:hover{
 
 .sensei{
     float: right;   
+}
+
+/* HEADER RESPONSIVO */
+
+@media screen and (max-width: 900px){
+    header.header-mobile{
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 900px){
+    section.header{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 560px){
