--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -186,7 +186,7 @@ h2:hover{
     width: 100%;
 
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
 
     padding: 1rem 2%;
 
