--- a/CSS/estevan.css
+++ b/CSS/estevan.css
@@ -321,7 +321,7 @@ header.header-mobile ul li a{
 
 .mapa img{
     width: 100%;
-    height: 85vh;
+    height: 100%;
     border-radius: 5px;
     text-align: center;
 }
