--- a/CSS/jap.css
+++ b/CSS/jap.css
@@ -192,6 +192,59 @@ header .dropdown h2{
     border-radius: 8px;
 }
 
+/* HEADER MENU MOBILE */
+
+.headerContainer{
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+header.header-mobile{
+    display:none;
+
+    width: 7.5rem;
+    height: 7.5rem;
+
+    background-image: url('../images/menu.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+
+    font-size: 2rem;
+}
+
+header.header-mobile:hover ul{
+    display: flex;
+}
+
+header.header-mobile ul{
+    display: none;
+    justify-content: space-around;
+    background-color: rgb(240, 240, 240);
+    border: 1px solid black;
+    position: absolute;
+
+    width: 100%;
+    top: 5rem;
+    left: 0;
+
+    list-style-type: none;
+
+    text-align: center;
+
+    
+}
+
+header.header-mobile ul li{
+    padding: 1px 2%;
+}
+
+header.header-mobile ul li a{
+    text-decoration: none;
+}
+
 .dropdown-content div{
     padding: 10px;
 }
@@ -356,6 +409,20 @@ main .descr .descr2 .three{
 
 .sensei{
     float: right;   
+}
+
+/* HEADER RESPONSIVO */
+
+@media screen and (max-width: 900px){
+    header.header-mobile{
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 900px){
+    section.header{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 560px){
