--- a/CSS/macedo.css
+++ b/CSS/macedo.css
@@ -186,9 +186,7 @@ h2:hover{
     width: 100%;
 
     display: flex;
-    flex-direction: row-reverse;
-
-    padding: 1rem 2%;
+    flex-direction: column;
 
 }
 
@@ -324,7 +322,7 @@ header.header-mobile ul li a{
 
 .mapa img{
     width: 100%;
-    height: 85vh;
+    height: 100%;
     border-radius: 5px;
     text-align: center;
 }
